fix auth issues, indexes

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -18,7 +18,10 @@
       "bundleIdentifier": "com.ericasmarshmallows.app",
       "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
       }
     },
     "android": {
