--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,9 +33,9 @@
     "firebase": "^12.9.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
@@ -48,7 +48,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-expo": "^54.0.17",
-    "react-test-renderer": "^19.2.0",
+    "react-test-renderer": "^19.1.0",
     "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "~5.9.2"
